<resources>
    <string name="app_name">TaskManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title_hint">Title</string>
    <string name="task_description_hint">Description</string>
    <string name="task_date_hint">Date</string>
    <string name="task_time_hint">Time</string>
    <string name="task_save_button">Save</string>
    <string name="task_cancel_button">cancel</string>
    <string name="task_color_button">Color</string>
    <string name="list_empty_text">You don\'t have any task.</string>
    <string name="delete_text_alert">Are you sure ?</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_delete_button_text">Cancel</string>
    <string name="add_task_toolbar_title">AddTask</string>
    <string name="edit_task_toolbar_title">EditTask</string>
    <string name="task_details_toolbar_title">TaskDetails</string>
    <string name="create_account_toolbar_title">CreateAccount</string>
    <string name="login_toolbar_title">Login</string>
    <string name="delete_all_tasks">delete all tasks</string>
    <string name="login_alert">You don\'t have account. Do you want to create one to save your tasks ?</string>
    <string name="all_tasks">All</string>
    <string name="done_tasks">Done</string>
    <string name="undone_tasks">Undone</string>
    <string name="ivalid_data_login">InputValidData</string>
    <string name="invalid_username">Invalid UserName</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="user_name_exist">this username already exist</string>
    <string name="share_title">Send data via</string>
    <string name="share_title_subject">Task data</string>
    <string name="task_done">task is done</string>
    <string name="task_undone">task is undone</string>
    <string name="share_text"> Title:%1$s  Description:%2$s.  Date: %3$s and Time: %4$s.  %5$s</string>
    <string name="show_date">Date : %s</string>
    <string name="show_time">Time : %s</string>

    <string-array name="color_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Orange</item>
    </string-array>

</resources>
